k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app
  labels:
    app: app
spec:
  selector:
    app: app
  ports:
  - port: 8080
