k8s/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
spec:
  parentRefs:
  - kind: Gateway
    name: https-lb-fastly-gateway
    namespace: cluster-infra-https-lb-fastly
  rules:
  - matches:
    - headers:
      - name: x-zon-service
        value: httpbin/app
    backendRefs:
    - name: app
      port: 8080
